fixed margin on navigation and finished media query stretch goal

--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,15 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 800px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    max-width: 90%;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
 @media (max-width: 500px) {
   .container {
     display: flex;
@@ -186,12 +195,28 @@ nav {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 800px) {
+  nav {
+    flex-flow: column nowrap;
+    align-items: center;
+    width: 100%;
+    padding-bottom: 10px;
+  }
+}
 @media (max-width: 500px) {
   nav {
     flex-flow: column nowrap;
     align-items: center;
     width: 100%;
     padding-bottom: 10px;
+  }
+}
+nav h1 {
+  margin-left: 24%;
+}
+@media (max-width: 800px) {
+  nav h1 {
+    margin-left: 0;
   }
 }
 nav .navigation {
@@ -202,6 +227,17 @@ nav .navigation a {
   text-decoration: none;
   color: #212529;
   font-size: 1.6rem;
+}
+@media (max-width: 800px) {
+  nav .navigation {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    width: 100%;
+    margin: 0;
+    padding-top: 20px;
+  }
 }
 @media (max-width: 500px) {
   nav .navigation {
@@ -238,6 +274,11 @@ nav .navigation a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 800px) {
+  .home .content-section {
+    flex-direction: column;
+  }
+}
 @media (max-width: 500px) {
   .home .content-section {
     flex-direction: column;
@@ -246,6 +287,11 @@ nav .navigation a {
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+@media (max-width: 800px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
 }
 @media (max-width: 500px) {
   .home .content-section .text-content {
@@ -256,6 +302,12 @@ nav .navigation a {
   width: 48%;
   padding-left: 1%;
 }
+@media (max-width: 800px) {
+  .home .content-section .img-content {
+    padding-left: 0;
+    width: 100%;
+  }
+}
 @media (max-width: 500px) {
   .home .content-section .img-content {
     padding-left: 0;
@@ -265,6 +317,11 @@ nav .navigation a {
 .home .content-section .img-content img {
   border-radius: 10px;
 }
+@media (max-width: 800px) {
+  .home .content-section .img-content img {
+    width: 100%;
+  }
+}
 @media (max-width: 500px) {
   .home .content-section .img-content img {
     width: 100%;
@@ -273,6 +330,11 @@ nav .navigation a {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 800px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
 }
 @media (max-width: 500px) {
   .home .inverse-content {
@@ -291,6 +353,11 @@ nav .navigation a {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 800px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 @media (max-width: 500px) {
   .home .content-destination {
     width: 100%;
@@ -305,6 +372,11 @@ nav .navigation a {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 800px) {
+  .home .content-pick {
+    flex-direction: column;
+  }
+}
 @media (max-width: 500px) {
   .home .content-pick {
     flex-direction: column;
@@ -313,6 +385,14 @@ nav .navigation a {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 800px) {
+  .home .content-pick .destination {
+    width: 80%;
+    padding: 0 30px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
 }
 @media (max-width: 500px) {
   .home .content-pick .destination {
@@ -336,6 +416,28 @@ nav .navigation a {
   background-color: #ffffff;
   color: #1d7a73;
   border: 1px solid #1d7a73;
+}
+@media (max-width: 800px) {
+  .home .content-pick .destination .btn {
+    display: block;
+    background-color: #3ea5c2;
+    cursor: pointer;
+    width: 80%;
+    height: 40px;
+    font-size: 1.6rem;
+    text-align: center;
+    padding-top: 4%;
+    border-radius: 10px;
+    color: #ffffff;
+    width: 50%;
+    padding-top: 2%;
+    margin: 20px auto;
+  }
+  .home .content-pick .destination .btn:hover {
+    background-color: #ffffff;
+    color: #3ea5c2;
+    border: 1px solid #3ea5c2;
+  }
 }
 @media (max-width: 500px) {
   .home .content-pick .destination .btn {
