--- a/less/global.less
+++ b/less/global.less
@@ -43,6 +43,13 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+  @media @tablet{
+    display: flex;
+    flex-direction: column;
+    max-width: 90%;
+    width: 100%;
+    margin: 0 auto;
+  }
   @media @mobile{
     display: flex;
     flex-direction: column;
