--- a/less/home-page.less
+++ b/less/home-page.less
@@ -12,6 +12,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media @tablet{
+      flex-direction: column;
+      //background-color: yellow;
+    }
     @media @mobile{
       flex-direction: column;
       //background-color: yellow;
@@ -20,6 +24,10 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @tablet{
+        width: 100%;
+        //background-color: pink;
+      }
       @media @mobile{
         width: 100%;
         //background-color: pink;
@@ -29,6 +37,11 @@
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @tablet{
+        padding-left: 0;
+        width: 100%;
+        //background-color: pink;
+      }
       @media @mobile{
         padding-left: 0;
         width: 100%;
@@ -37,6 +50,9 @@
 
       img {
         border-radius: 10px;
+        @media @tablet{
+          width: 100%;
+        }
         @media @mobile{
           width: 100%;
         }
@@ -47,6 +63,10 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media @tablet{
+      flex-direction: column-reverse;
+      //background-color: pink;
+    }
     @media @mobile{
       flex-direction: column-reverse;
       //background-color: pink;
@@ -66,6 +86,10 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @tablet{
+      width: 100%;
+      //background-color: pink;
+    }
     @media @mobile{
       width: 100%;
       //background-color: pink;
@@ -81,6 +105,10 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @tablet{
+      flex-direction: column;
+      //background-color: yellow;
+    }
     @media @mobile{
       flex-direction: column;
       //background-color: yellow;
@@ -89,6 +117,13 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @tablet{
+        width: 80%;
+        padding: 0 30px;
+        margin: 0 auto;
+        margin-bottom: 30px;
+        //background-color: pink;
+      }
       @media @mobile{
         width: 100%;
         padding: 0 30px;
@@ -97,6 +132,12 @@
 
       .btn{
         .button-style();
+        @media @tablet{
+          .button-style(@bg-color:rgb(62, 165, 194), @font:rgb(255, 255, 255));
+          width: 50%;
+          padding-top: 2%;
+          margin: 20px auto;
+        }
         @media @mobile{
           .button-style(@bg-color:rgb(62, 165, 194), @font:rgb(255, 255, 255));
           width: 100%;
