--- a/less/variables.less
+++ b/less/variables.less
@@ -15,3 +15,6 @@
 
 // Mobile
 @mobile: ~"(max-width: 500px)";
+
+// Tablet
+@tablet: ~"(max-width: 800px)";
